--- a/chat.html
+++ b/chat.html
@@ -1,3 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8595/8595483.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boredom Hub - Chat</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
+</head>
+<body>
+    <div class="sidebar">
+        <a href="index.html" target="_blank">Home</a>
+        <a href="games.html" target="_blank">Games</a>
+        <a href="about.html" target="_blank">About Us</a>
+        <a href="contact.html" target="_blank">Contact</a>   
+        <a href="chat.html" target="_blank">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+    </div>
+    <div class="content">
+        <h2>Chat Room</h2>
+        <p id="authStatus">Not logged in</p>
+        <button onclick="signIn()">Sign In</button>
+        <button onclick="signOut()">Sign Out</button>
+        <br><br>
+        <input type="text" id="usernameInput" placeholder="Enter Username">
+        <input type="text" id="messageInput" placeholder="Type a message" onkeydown="handleKeyPress(event)">
+        <button onclick="sendMessage()">Send</button>
+        <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
+    </div>
+
 <script>
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
@@ -129,3 +160,7 @@
         loadMessages();
     };
 </script>
+
+
+</body>
+</html>
