--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
         <button onclick="signOut()">Sign Out</button>
         <br><br>
         <input type="text" id="usernameInput" placeholder="Enter Username">
-        <input type="text" id="messageInput" placeholder="Type a message" onkeydown="handleKeyPress(event)">
+        <input type="text" id="messageInput" placeholder="Type a message">
         <button onclick="sendMessage()">Send</button>
         <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
     </div>
@@ -33,9 +33,9 @@
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = JSON.parse(localStorage.getItem("mutedUsers")) || {}; 
-    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; 
-    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; 
+    let mutedUsers = {}; // Stores globally muted users
+    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; // Mods
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; // Devs
 
     function signIn() {
         const email = prompt("Enter your email:");
@@ -67,16 +67,23 @@
             return;
         }
 
-        if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
+        // **Check if user is muted before sending**
+        if (mutedUsers[email]) {
             alert("You are muted and cannot send messages.");
             return;
         }
 
+        // **Handle mute/unmute commands**
         if (messageInput.startsWith("/mute")) {
             handleMuteCommand(messageInput);
             return;
         }
+        if (messageInput.startsWith("/unmute")) {
+            handleUnmuteCommand(messageInput);
+            return;
+        }
 
+        // **Send message**
         channel.publish("message", { text: messageInput, user: email, username: username });
         document.getElementById("messageInput").value = "";
     }
@@ -85,6 +92,7 @@
         const email = sessionStorage.getItem("userEmail");
         if (!email) return;
 
+        // **Only Mods, Devs, and Head Dev can mute**
         if (!modEmails.includes(email) && !devEmails.includes(email)) {
             alert("You do not have permission to mute users.");
             return;
@@ -97,16 +105,43 @@
         }
 
         const emailToMute = messageParts[1];
+
         if (!emailToMute.includes("@")) {
             alert("Invalid email format.");
             return;
         }
 
-        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; 
-        localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); 
+        mutedUsers[emailToMute] = true; // Mark user as muted
+        alert(`${emailToMute} has been muted.`);
+        channel.publish("mute", { user: emailToMute }); // Notify everyone in chat
+    }
 
-        alert(`${emailToMute} has been muted for 15 minutes.`);
-        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
+    function handleUnmuteCommand(message) {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) return;
+
+        // **Only Mods, Devs, and Head Dev can unmute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to unmute users.");
+            return;
+        }
+
+        const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /unmute <email>");
+            return;
+        }
+
+        const emailToUnmute = messageParts[1];
+
+        if (!emailToUnmute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        delete mutedUsers[emailToUnmute]; // Remove user from mute list
+        alert(`${emailToUnmute} has been unmuted.`);
+        channel.publish("unmute", { user: emailToUnmute }); // Notify everyone
     }
 
     function loadMessages() {
@@ -114,42 +149,43 @@
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
 
-            if (mutedUsers[data.user] && Date.now() < mutedUsers[data.user]) {
-                console.log(`Blocked message from muted user: ${data.user}`);
-                return;
+            // **Block messages from muted users globally**
+            if (mutedUsers[data.user]) {
+                return; // Hide message for all users
             }
 
             const messageElement = document.createElement("p");
+
             let extraStyle = "";
             let roleTag = "";
-            let userEmail = "Hidden"; // Default to Hidden email for non-devs/mods
+            let userEmail = data.user;
 
-            // Show email for devs, mods, and head dev
-            if (modEmails.includes(data.user) || devEmails.includes(data.user)) {
-                userEmail = data.user;
-            }
-
+            // **Handle mod users' display and email visibility**
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
                 roleTag = " <strong>[MOD]</strong>";
-            } else if (data.user === "856030@dpsk12.net") {
-                extraStyle = "color: red;";
-                roleTag = " <strong>[HEAD DEV]</strong>";
+                if (!devEmails.includes(sessionStorage.getItem("userEmail"))) {
+                    userEmail = "";
+                }
             } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
+                userEmail = "";
             }
 
             messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         });
-    }
 
-    function handleKeyPress(event) {
-        if (event.key === "Enter") {
-            sendMessage();
-        }
+        // **Listen for mute/unmute updates**
+        channel.subscribe("mute", (message) => {
+            mutedUsers[message.data.user] = true;
+        });
+
+        channel.subscribe("unmute", (message) => {
+            delete mutedUsers[message.data.user];
+        });
     }
 
     window.onload = () => {
@@ -160,7 +196,6 @@
         loadMessages();
     };
 </script>
-
 
 </body>
 </html>
