--- a/chat.html
+++ b/chat.html
@@ -1,51 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8595/8595483.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boredom Hub - Chat</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
-</head>
-<body>
-    <div class="sidebar">
-        <a href="index.html" target="_blank">Home</a>
-        <a href="games.html" target="_blank">Games</a>
-        <a href="about.html" target="_blank">About Us</a>
-        <a href="contact.html" target="_blank">Contact</a>   
-        <a href="chat.html" target="_blank">Chat</a>
-        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
-    </div>
-    <div class="content">
-        <h2>Chat Room</h2>
-        <p id="authStatus">Not logged in</p>
-        <button onclick="signIn()">Sign In</button>
-        <button onclick="signOut()">Sign Out</button>
-        <br><br>
-        <input type="text" id="usernameInput" placeholder="Enter Username">
-        <input type="text" id="messageInput" placeholder="Type a message">
-        <button onclick="sendMessage()">Send</button>
-        <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
-    </div>
-
 <script>
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = {}; // Stores globally muted users
-    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; // Mods
-    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; // Devs
+    let mutedUsers = {}; // Stores muted users with their expiration time
 
     function signIn() {
         const email = prompt("Enter your email:");
         const username = prompt("Enter your username:");
-
+        
         if (!email || !username) {
             alert("Email and username are required!");
             return;
         }
-
+        
         sessionStorage.setItem("userEmail", email);
         sessionStorage.setItem("username", username);
         document.getElementById("authStatus").innerText = `Logged in as ${email}`;
@@ -58,7 +25,7 @@
     }
 
     function sendMessage() {
-        const messageInput = document.getElementById("messageInput").value.trim();
+        const messageInput = document.getElementById("messageInput").value;
         const email = sessionStorage.getItem("userEmail");
         const username = sessionStorage.getItem("username");
 
@@ -67,23 +34,18 @@
             return;
         }
 
-        // **Check if user is muted before sending**
-        if (mutedUsers[email]) {
-            alert("You are muted and cannot send messages.");
+        // **BLOCK muted users from sending messages**
+        if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
+            alert("You are muted and cannot send messages for now.");
             return;
         }
 
-        // **Handle mute/unmute commands**
+        // Check if it's a mute command
         if (messageInput.startsWith("/mute")) {
             handleMuteCommand(messageInput);
             return;
         }
-        if (messageInput.startsWith("/unmute")) {
-            handleUnmuteCommand(messageInput);
-            return;
-        }
 
-        // **Send message**
         channel.publish("message", { text: messageInput, user: email, username: username });
         document.getElementById("messageInput").value = "";
     }
@@ -92,82 +54,48 @@
         const email = sessionStorage.getItem("userEmail");
         if (!email) return;
 
-        // **Only Mods, Devs, and Head Dev can mute**
-        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+        // Only HEAD DEV and DEVS can mute
+        if (email !== "856030@dpsk12.net" && !["866537@dpsk12.net", "871491@dpsk12.net"].includes(email)) {
             alert("You do not have permission to mute users.");
             return;
         }
 
         const messageParts = message.split(" ");
-        if (messageParts.length < 2) {
-            alert("Usage: /mute <email>");
-            return;
-        }
-
         const emailToMute = messageParts[1];
 
-        if (!emailToMute.includes("@")) {
-            alert("Invalid email format.");
+        if (!emailToMute) {
+            alert("Please provide an email to mute.");
             return;
         }
 
-        mutedUsers[emailToMute] = true; // Mark user as muted
-        alert(`${emailToMute} has been muted.`);
-        channel.publish("mute", { user: emailToMute }); // Notify everyone in chat
-    }
+        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; // Set mute expiration time
 
-    function handleUnmuteCommand(message) {
-        const email = sessionStorage.getItem("userEmail");
-        if (!email) return;
+        alert(`${emailToMute} has been muted for 15 minutes.`);
+        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
 
-        // **Only Mods, Devs, and Head Dev can unmute**
-        if (!modEmails.includes(email) && !devEmails.includes(email)) {
-            alert("You do not have permission to unmute users.");
-            return;
-        }
-
-        const messageParts = message.split(" ");
-        if (messageParts.length < 2) {
-            alert("Usage: /unmute <email>");
-            return;
-        }
-
-        const emailToUnmute = messageParts[1];
-
-        if (!emailToUnmute.includes("@")) {
-            alert("Invalid email format.");
-            return;
-        }
-
-        delete mutedUsers[emailToUnmute]; // Remove user from mute list
-        alert(`${emailToUnmute} has been unmuted.`);
-        channel.publish("unmute", { user: emailToUnmute }); // Notify everyone
+        // Auto-unmute after 15 minutes
+        setTimeout(() => {
+            delete mutedUsers[emailToMute];
+            channel.publish("message", { text: `${emailToMute} is now unmuted.`, user: "System", username: "System" });
+        }, 15 * 60 * 1000);
     }
 
     function loadMessages() {
         channel.subscribe("message", (message) => {
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
-
-            // **Block messages from muted users globally**
-            if (mutedUsers[data.user]) {
-                return; // Hide message for all users
-            }
-
             const messageElement = document.createElement("p");
 
             let extraStyle = "";
             let roleTag = "";
             let userEmail = data.user;
 
-            // **Handle mod users' display and email visibility**
-            if (modEmails.includes(data.user)) {
-                extraStyle = "color: yellow;";
-                roleTag = " <strong>[MOD]</strong>";
-                if (!devEmails.includes(sessionStorage.getItem("userEmail"))) {
-                    userEmail = "";
-                }
-            } else if (devEmails.includes(data.user)) {
+            // Hide emails of special users
+            if (data.user === "856030@dpsk12.net") {
+                extraStyle = "color: red;";
+                roleTag = " <strong>[HEAD DEV]</strong>";
+                userEmail = "";
+            } else if (["866537@dpsk12.net", "871491@dpsk12.net"].includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
                 userEmail = "";
@@ -176,15 +104,6 @@
             messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
-        });
-
-        // **Listen for mute/unmute updates**
-        channel.subscribe("mute", (message) => {
-            mutedUsers[message.data.user] = true;
-        });
-
-        channel.subscribe("unmute", (message) => {
-            delete mutedUsers[message.data.user];
         });
     }
 
@@ -196,6 +115,3 @@
         loadMessages();
     };
 </script>
-
-</body>
-</html>
