--- a/games.html
+++ b/games.html
@@ -28,6 +28,7 @@
                 { name: "2048", url: "2048/index.html" },
                 { name: "Cluster Rush", url: "Cluster Rush/index.html" },
                 { name: "Eaglercraft", url: "Eaglercraft 1.5.2/eaglercraft.1.5.2.html"},
+                { name: "Survival Race", url: "Survival race/sigma.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
