--- a/chat.html
+++ b/chat.html
@@ -24,25 +24,28 @@
         <button onclick="signOut()">Sign Out</button>
         <br><br>
         <input type="text" id="usernameInput" placeholder="Enter Username">
-        <input type="text" id="messageInput" placeholder="Type a message">
+        <input type="text" id="messageInput" placeholder="Type a message" onkeydown="handleKeyPress(event)">
         <button onclick="sendMessage()">Send</button>
         <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
     </div>
-    <script>
+
+<script>
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = {}; // Stores muted users with their expiration time
+    let mutedUsers = JSON.parse(localStorage.getItem("mutedUsers")) || {}; 
+    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; 
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; 
 
     function signIn() {
         const email = prompt("Enter your email:");
         const username = prompt("Enter your username:");
-        
+
         if (!email || !username) {
             alert("Email and username are required!");
             return;
         }
-        
+
         sessionStorage.setItem("userEmail", email);
         sessionStorage.setItem("username", username);
         document.getElementById("authStatus").innerText = `Logged in as ${email}`;
@@ -55,7 +58,7 @@
     }
 
     function sendMessage() {
-        const messageInput = document.getElementById("messageInput").value;
+        const messageInput = document.getElementById("messageInput").value.trim();
         const email = sessionStorage.getItem("userEmail");
         const username = sessionStorage.getItem("username");
 
@@ -64,13 +67,11 @@
             return;
         }
 
-        // **BLOCK muted users from sending messages**
         if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
-            alert("You are muted and cannot send messages for now.");
+            alert("You are muted and cannot send messages.");
             return;
         }
 
-        // Check if it's a mute command
         if (messageInput.startsWith("/mute")) {
             handleMuteCommand(messageInput);
             return;
@@ -84,57 +85,66 @@
         const email = sessionStorage.getItem("userEmail");
         if (!email) return;
 
-        // Only HEAD DEV and DEVS can mute
-        if (email !== "856030@dpsk12.net" && !["866537@dpsk12.net", "871491@dpsk12.net"].includes(email)) {
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
             alert("You do not have permission to mute users.");
             return;
         }
 
         const messageParts = message.split(" ");
-        const emailToMute = messageParts[1];
-
-        if (!emailToMute) {
-            alert("Please provide an email to mute.");
+        if (messageParts.length < 2) {
+            alert("Usage: /mute <email>");
             return;
         }
 
-        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; // Set mute expiration time
+        const emailToMute = messageParts[1];
+        if (!emailToMute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; 
+        localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); 
 
         alert(`${emailToMute} has been muted for 15 minutes.`);
         channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
-
-        // Auto-unmute after 15 minutes
-        setTimeout(() => {
-            delete mutedUsers[emailToMute];
-            channel.publish("message", { text: `${emailToMute} is now unmuted.`, user: "System", username: "System" });
-        }, 15 * 60 * 1000);
     }
 
     function loadMessages() {
         channel.subscribe("message", (message) => {
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
-            const messageElement = document.createElement("p");
 
+            if (mutedUsers[data.user] && Date.now() < mutedUsers[data.user]) {
+                console.log(`Blocked message from muted user: ${data.user}`);
+                return;
+            }
+
+            const messageElement = document.createElement("p");
             let extraStyle = "";
             let roleTag = "";
-            let userEmail = data.user;
+            let userEmail = (modEmails.includes(data.user) || devEmails.includes(data.user)) ? data.user : "Hidden";
 
-            // Hide emails of special users
-            if (data.user === "856030@dpsk12.net") {
+            if (modEmails.includes(data.user)) {
+                extraStyle = "color: yellow;";
+                roleTag = " <strong>[MOD]</strong>";
+            } else if (data.user === "856030@dpsk12.net") {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[HEAD DEV]</strong>";
-                userEmail = "";
-            } else if (["866537@dpsk12.net", "871491@dpsk12.net"].includes(data.user)) {
+            } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
-                userEmail = "";
             }
 
             messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         });
+    }
+
+    function handleKeyPress(event) {
+        if (event.key === "Enter") {
+            sendMessage();
+        }
     }
 
     window.onload = () => {
@@ -145,5 +155,6 @@
         loadMessages();
     };
 </script>
+
 </body>
 </html>
