--- a/games.html
+++ b/games.html
@@ -29,6 +29,7 @@
                 { name: "Cluster Rush", url: "Cluster Rush/index.html" },
                 { name: "Eaglercraft", url: "Eaglercraft 1.5.2/eaglercraft.1.5.2.html"},
                 { name: "Survival Race", url: "Survival race/sigma.html"},
+                { name: "Cs 1.6", url: "CS 1.6/sigmacodeboi.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
