--- a/games.html
+++ b/games.html
@@ -30,6 +30,7 @@
                 { name: "Eaglercraft", url: "Eaglercraft 1.5.2/eaglercraft.1.5.2.html"},
                 { name: "Survival Race", url: "Survival race/sigma.html"},
                 { name: "Cs 1.6", url: "CS 1.6/sigmacodeboi.html"},
+                { name: "Red vs Blue 2", url: "red v blue/definetlynotcode.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
