--- a/games.html
+++ b/games.html
@@ -31,6 +31,7 @@
                 { name: "Survival Race", url: "Survival race/sigma.html"},
                 { name: "Cs 1.6", url: "CS 1.6/sigmacodeboi.html"},
                 { name: "Red vs Blue 2", url: "red v blue/definetlynotcode.html"},
+                { name: "OvO", url: "OvO/just_some-schoolwork.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
