--- a/games.html
+++ b/games.html
@@ -32,6 +32,7 @@
                 { name: "Cs 1.6", url: "CS 1.6/sigmacodeboi.html"},
                 { name: "Red vs Blue 2", url: "red v blue/definetlynotcode.html"},
                 { name: "OvO", url: "OvO/just_some-schoolwork.html"},
+                { name: "Stunt Cars", url: "Stunt Cars/ahhh_why_am_i-htmlcode.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
