--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
         <button onclick="signOut()">Sign Out</button>
         <br><br>
         <input type="text" id="usernameInput" placeholder="Enter Username">
-        <input type="text" id="messageInput" placeholder="Type a message" onkeydown="handleKeyPress(event)">
+        <input type="text" id="messageInput" placeholder="Type a message">
         <button onclick="sendMessage()">Send</button>
         <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
     </div>
@@ -33,9 +33,10 @@
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = JSON.parse(localStorage.getItem("mutedUsers")) || {}; 
-    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; 
-    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; 
+    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"];
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"];
+    const headDevEmail = "856030@dpsk12.net";
+    const mutedUsers = new Map();
 
     function signIn() {
         const email = prompt("Enter your email:");
@@ -67,85 +68,68 @@
             return;
         }
 
-        if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
+        if (mutedUsers.has(email) && mutedUsers.get(email) > Date.now()) {
             alert("You are muted and cannot send messages.");
             return;
         }
 
-        if (messageInput.startsWith("/mute")) {
-            handleMuteCommand(messageInput);
+        if (messageInput.startsWith("/mut ")) {
+            if (modEmails.includes(email) || devEmails.includes(email) || email === headDevEmail) {
+                const targetEmail = messageInput.split(" ")[1];
+                if (targetEmail) {
+                    mutedUsers.set(targetEmail, Date.now() + 15 * 60 * 1000);
+                    alert(`${targetEmail} has been muted for 15 minutes.`);
+                }
+            } else {
+                alert("You do not have permission to mute users.");
+            }
             return;
         }
 
-        channel.publish("message", { text: messageInput, user: email, username: username });
-        document.getElementById("messageInput").value = "";
-    }
-
-    function handleMuteCommand(message) {
-        const email = sessionStorage.getItem("userEmail");
-        if (!email) return;
-
-        if (!modEmails.includes(email) && !devEmails.includes(email)) {
-            alert("You do not have permission to mute users.");
-            return;
+        if (messageInput) {
+            channel.publish("message", { text: messageInput, user: email, username: username });
+            document.getElementById("messageInput").value = "";
         }
-
-        const messageParts = message.split(" ");
-        if (messageParts.length < 2) {
-            alert("Usage: /mute <email>");
-            return;
-        }
-
-        const emailToMute = messageParts[1];
-        if (!emailToMute.includes("@")) {
-            alert("Invalid email format.");
-            return;
-        }
-
-        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; 
-        localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); 
-
-        alert(`${emailToMute} has been muted for 15 minutes.`);
-        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
     }
 
     function loadMessages() {
         channel.subscribe("message", (message) => {
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
-
-            if (mutedUsers[data.user] && Date.now() < mutedUsers[data.user]) {
-                console.log(`Blocked message from muted user: ${data.user}`);
-                return;
-            }
-
             const messageElement = document.createElement("p");
+
             let extraStyle = "";
             let roleTag = "";
-            let userEmail = (modEmails.includes(data.user) || devEmails.includes(data.user)) ? data.user : "Hidden";
+            let userEmail = data.user;
+            let emailDisplay = "";
+
+            const currentUserEmail = sessionStorage.getItem("userEmail");
+            if (modEmails.includes(currentUserEmail) || devEmails.includes(currentUserEmail) || currentUserEmail === headDevEmail) {
+                emailDisplay = ` (${userEmail})`;
+            }
 
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
                 roleTag = " <strong>[MOD]</strong>";
-            } else if (data.user === "856030@dpsk12.net") {
-                extraStyle = "color: red;";
+            } else if (data.user === headDevEmail) {
+                extraStyle = "color: blue; font-weight: bold;";
                 roleTag = " <strong>[HEAD DEV]</strong>";
             } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
             }
 
-            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username}${roleTag}${emailDisplay}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         });
     }
 
-    function handleKeyPress(event) {
+    document.getElementById("messageInput").addEventListener("keypress", function(event) {
         if (event.key === "Enter") {
             sendMessage();
         }
-    }
+    });
 
     window.onload = () => {
         const email = sessionStorage.getItem("userEmail");
@@ -158,3 +142,4 @@
 
 </body>
 </html>
+
